[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/SceneTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/music/We're Bird People Now.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/music/If It's a Fight You Want.ogg" type="AudioStream" id=4]

[node name="SceneManager" type="Node2D"]
script = ExtResource( 1 )

[node name="SceneTransition" parent="." instance=ExtResource( 2 )]

[node name="keep" type="Node" parent="."]

[node name="menu_music" type="AudioStreamPlayer" parent="keep"]
stream = ExtResource( 3 )

[node name="game_music" type="AudioStreamPlayer" parent="keep"]
stream = ExtResource( 4 )
